feat: делает header 930px

--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,11 +1,37 @@
 .main-header {
+  position: relative;
+
+  overflow: hidden;
   background-image: url("../img/background/header-back.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: $color-back-header;
 
-  @media (min-width: $vp-1340) {
+  @media (min-width: 1024px) {
     @include retina {
-      background-image: url("../img/background/header-back.jpg");
+      background-image: url("../img/background/header-back@2x.jpg");
     }
   }
+
+   @include vp-1019 {
+    background-position: bottom;
+  }
+}
+
+.main-header__decor-wrapper {
+  max-width: 363px;
+
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  transform: translate(0%, 28%);
+
+  @include vp-1019{
+    display: none;
+  }
+}
+
+.main-header__decor {
+  width: 100%;
+  height: 100%;
 }
