--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,7 +8,7 @@ $color-default-white: #ffffff;
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
-
+$color-back-header: rgba(138, 123, 96, 0.67);
 
 
 // Gradient
