--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,5 +19,7 @@
 // ---------------------------------
 
 @import "blocks/main-header";
+@import "blocks/logo";
+@import "blocks/main-nav";
 
 // ---------------------------------
