feat: делает header 300px

--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-color: $color-back-header;
+  color: $color-default-white;
 
   @media (min-width: 1024px) {
     @include retina {
