--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -41,6 +41,7 @@ $trans-600: 0.6s $tf-default;
 // Viewports
 // ---------------------------------
 
+$vp-300: 300px;
 $vp-320: 320px;
 $vp-375: 375px;
 $vp-700: 700px;
