--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,3 +1,11 @@
+.main-nav {
+  @include vp-699 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .main-nav__logo {
   max-width: 267px;
 
@@ -6,6 +14,11 @@
 
   @include vp-1019 {
     margin: 0 0 0 20px;
+  }
+
+  @include vp-699 {
+    max-width: 167px;
+    margin: 0;
   }
 }
 
@@ -17,7 +30,18 @@
     margin: 130px 0 182px;
   }
 
+  @include vp-699 {
+    margin: 50px 0 94px;
+    max-width: 305px;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @include vp-319 {
+    margin: 49px 0 149px;
+  }
 }
 
 .main-nav__description h2 {
@@ -29,6 +53,16 @@
   line-height: 80px;
   text-transform: uppercase;
   color: $color-default-white;
+
+  @include vp-699 {
+    font-size: 36px;
+    line-height: 40px;
+  }
+
+  @include vp-319 {
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
 
 .main-nav__description p {
@@ -42,5 +76,13 @@
 
   @include vp-1019 {
     margin: 27px 0 0 0;
+  }
+
+  @include vp-699 {
+    margin: 20px 0 0 0;
+
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
   }
 }
