feat: делает компонент превью

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,5 +21,6 @@
 @import "blocks/main-header";
 @import "blocks/logo";
 @import "blocks/main-nav";
+@import "blocks/preview";
 
 // ---------------------------------
