--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,7 +9,9 @@ $color-default-white: #ffffff;
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 $color-back-header: rgba(138, 123, 96, 0.67);
-
+$color-linen: #f7eee5;
+$color-smalt: #0a3b93;
+$color-soya-bean: #6c5f4a;
 
 // Gradient
 
