feat: делает блок миссия десктоп

--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -25,7 +25,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  transform: translate(0%, 28%);
+  transform: translate(0, 28%);
 
   @include vp-1019{
     display: none;
