--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,5 +22,6 @@
 @import "blocks/logo";
 @import "blocks/main-nav";
 @import "blocks/preview";
+@import "blocks/mission";
 
 // ---------------------------------
