feat: делает блок миссия на 610px

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -27,7 +27,7 @@ $fz-default: 18px;
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
 $ff-arial: "Arial", "Arial", sans-serif;
 
-$ff-lato: "lato", "Arial", sans-serif;
+$ff-lato: "Lato", "Arial", sans-serif;
 
 // Animation
 // ---------------------------------
