--- a/source/sass/blocks/mission.scss
+++ b/source/sass/blocks/mission.scss
@@ -6,6 +6,19 @@
   overflow: hidden;
 
   background-color: $color-smalt;
+
+  @include vp-1019 {
+    padding: 94px 40px;
+    margin-top: 74px;
+  }
+
+  @include vp-699 {
+    padding: 32px 20px;
+    margin-top: 51px;
+
+    display: flex;
+    align-items: center;
+  }
 }
 
 .mission__top p {
@@ -20,6 +33,15 @@
   font-size: 24px;
   line-height: 32px;
   color: $color-default-white;
+  z-index: 1;
+
+  @include vp-699 {
+    margin: 0 0 0 27px;
+
+    font-family: $ff-arial;
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 .mission__quotes {
@@ -29,6 +51,10 @@
 
   display: inline-block;
   vertical-align: middle;
+
+  @include vp-699 {
+    max-width: 22px;
+  }
 }
 
 .mission__decor-wrapper {
@@ -40,6 +66,16 @@
   right: 0;
   bottom: 0;
   transform: translate(1%, 29%);
+  object-fit: cover;
+
+  @include vp-1019 {
+    transform: translate(65%, 27%);
+  }
+
+  @include vp-699 {
+    max-width: 179px;
+    transform: translate(1%, 3%);
+  }
 }
 
 .mission__decor {
@@ -48,6 +84,13 @@
 }
 
 .mission__bottom {
+  padding-top: 80px;
+  padding-bottom: 101px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   background-image: url("../img/background/mission-back.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -59,15 +102,15 @@
       background-image: url("../img/background/mission-back@2x.jpg");
     }
   }
-}
 
-.mission__bottom {
-  padding-top: 80px;
-  padding-bottom: 101px;
+  @include vp-1019 {
+    padding-top: 84px;
+  }
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include vp-699 {
+    padding-top: 56px;
+    padding-bottom: 55px;
+  }
 }
 
 .mission__content {
@@ -109,6 +152,25 @@
     right: -88px;
     top: 50%;
   }
+
+  @include vp-699 {
+    font-size: 30px;
+    line-height: 46px;
+
+    &::before {
+      width: 15px;
+    height: 1px;
+    left: -29px;
+    top: 44%;
+    }
+
+    &::after {
+      width: 15px;
+    height: 1px;
+    right: -29px;
+    top: 44%;
+    }
+  }
 }
 
 .mission__content p {
@@ -120,6 +182,21 @@
   line-height: 28px;
   text-transform: uppercase;
   color: $color-default-white;
+
+  @include vp-1019 {
+    margin: 35px 0 37px;
+    max-width: 585px;
+
+    text-align: center;
+  }
+
+  @include vp-699 {
+    max-width: 430px;
+    margin: 18px 0 11px;
+
+    font-size: 16px;
+line-height: 20px;
+  }
 }
 
 .mission__button {
@@ -127,7 +204,7 @@
   height: 100%;
   max-width: 283px;
   padding: 20px;
-  
+
   display: inline-flex;
   vertical-align: middle;
   justify-content: center;
@@ -148,5 +225,12 @@
 
   @include hover-focus {
     opacity: 0.8;
+  }
+
+  @include vp-699 {
+    max-width: 171px;
+    padding: 10px;
+
+    font-size: 14px;
   }
 }
