--- a/source/sass/blocks/mission.scss
+++ b/source/sass/blocks/mission.scss
@@ -1,23 +1,53 @@
-.mission__top {
-  padding: 94px 60px;
+.mission {
   margin-top: 97px;
-
   position: relative;
   overflow: hidden;
-
   background-color: $color-smalt;
 
-  @include vp-1019 {
-    padding: 94px 40px;
+   @include vp-1019 {
     margin-top: 74px;
   }
 
   @include vp-699 {
-    padding: 32px 20px;
     margin-top: 51px;
+  }
+
+  @include vp-319 {
+    margin-top: 30px;
+  }
+}
+
+.mission__top {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
+  position: relative;
+  overflow: hidden;
+
+
+  @include vp-1339 {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
+  @include vp-1019 {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
+  @include vp-699 {
+    padding-top: 32px;
+    padding-bottom: 32px;
 
     display: flex;
     align-items: center;
+  }
+
+  @include vp-319 {
+    padding-top: 33px;
+    padding-bottom: 31px;
+
+    align-items: flex-start;
   }
 }
 
@@ -42,6 +72,10 @@
     font-size: 16px;
     line-height: 20px;
   }
+
+  @include vp-319 {
+    margin: 0 0 0 7px;
+  }
 }
 
 .mission__quotes {
@@ -65,17 +99,22 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  transform: translate(1%, 29%);
+  transform: translate(1%, -21%);
   object-fit: cover;
 
   @include vp-1019 {
-    transform: translate(65%, 27%);
+    transform: translate(65%,-23%)
   }
 
   @include vp-699 {
     max-width: 179px;
-    transform: translate(1%, 3%);
+    transform: translate(1%,-35%);
   }
+
+  @include vp-319 {
+    transform: translate(27%,-20%);
+  }
+
 }
 
 .mission__decor {
@@ -86,6 +125,9 @@
 .mission__bottom {
   padding-top: 80px;
   padding-bottom: 101px;
+  position: relative;
+  align-items: center;
+    z-index: 1;
 
   display: flex;
   flex-direction: column;
@@ -110,6 +152,10 @@
   @include vp-699 {
     padding-top: 56px;
     padding-bottom: 55px;
+  }
+
+   @include vp-319 {
+        padding-top: 28px;
   }
 }
 
@@ -171,6 +217,21 @@
     top: 44%;
     }
   }
+
+  @include vp-319 {
+    font-size: 18px;
+
+    &::before {
+      left: -31px;
+    top: 45%;
+    }
+
+    &::after {
+      right: -31px;
+    top: 45%;
+    }
+
+  }
 }
 
 .mission__content p {
@@ -197,6 +258,11 @@
     font-size: 16px;
 line-height: 20px;
   }
+
+  @include vp-319 {
+    max-width: 277px;
+    margin: 4px 0 29px;
+  }
 }
 
 .mission__button {
@@ -217,6 +283,18 @@ line-height: 20px;
   color: $color-smalt;
   background-color: $color-default-white;
 
+  &:hover,
+  &:active,
+  &:focus {
+    background-color: $color-smalt;
+    transition: opacity $trans-default, background-color $trans-default, color $trans-default;
+    color: $color-default-white;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
   &:disabled {
     opacity: 0.5;
 
@@ -232,5 +310,12 @@ line-height: 20px;
     padding: 10px;
 
     font-size: 14px;
+  }
+
+
+  @include vp-319 {
+    max-width: 197px;
+
+    font-size: 18px;
   }
 }
