--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,5 +25,6 @@
 @import "blocks/mission";
 @import "blocks/features";
 @import "blocks/slider-control";
+@import "blocks/advt";
 
 // ---------------------------------
