--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,7 +11,9 @@ $color-default-white: #ffffff;
 $color-back-header: rgba(138, 123, 96, 0.67);
 $color-linen: #f7eee5;
 $color-smalt: #0a3b93;
+$color-smalt2: #0a3b8e;
 $color-soya-bean: #6c5f4a;
+$color-stonewall: #8a7b60;
 
 // Gradient
 
